<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/img_circo"
        android:layout_width="133dp"
        android:layout_height="181dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/descripcion_imagen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/circo" />

    <TextView
        android:id="@+id/txt_titulo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/titulo1"
        android:textColor="@color/color_titulo1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_circo" />

    <TextView
        android:id="@+id/txt_titulo_temporada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="139dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="215dp"
        android:text="@string/titulo2"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.827"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo1" />

    <Spinner
        android:id="@+id/sp_temporada"
        android:layout_width="332dp"
        android:layout_height="59dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/titulo3"
        android:labelFor="@string/titulo3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_titulo_temporada"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/edt_cantidad_entradas"
        android:layout_width="372dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="@string/cantidad_entradas"
        android:ems="10"
        android:hint="@string/cantidad_entradas"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_temporada" />

    <TextView
        android:id="@+id/txt_titulo_palomitas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="26dp"
        android:text="@string/palomitas"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_cantidad_entradas" />

    <RadioGroup
        android:id="@+id/rg_palomitas"
        android:layout_width="182dp"
        android:layout_height="111dp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_titulo_palomitas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.718"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_titulo_palomitas"
        app:layout_constraintVertical_bias="0.0" >

        <RadioButton
            android:id="@+id/rb_palomitas_si"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="asignar_quiere_palomitas"
            android:text="@string/SI"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/rb_palomitas_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:onClick="asignar_quiere_palomitas"
            android:text="@string/NO"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RadioGroup>

    <Button
        android:id="@+id/bt_ir_al_pago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/ir_al_pago"
        android:onClick="ir_al_pago"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>