<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pantalla2Activity">

    <TextView
        android:id="@+id/txt_pantalla2_titulo1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/pago"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_pantalla2_titulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:text="@string/total_precio_entradas"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pantalla2_titulo1" />

    <TextView
        android:id="@+id/txt_pantalla2_titulo2_numero1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/cero"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_pantalla2_titulo2"
        app:layout_constraintStart_toEndOf="@+id/txt_pantalla2_titulo2" />

    <TextView
        android:id="@+id/txt_pantalla2_titulo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/saldo_tarjeta"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pantalla2_titulo2" />

    <TextView
        android:id="@+id/txt_pantalla2_titulo3_numero1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="108dp"
        android:text="@string/cero"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_pantalla2_titulo3"
        app:layout_constraintStart_toEndOf="@+id/txt_pantalla2_titulo3" />

    <Button
        android:id="@+id/bt_cargar_saldo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/cargar_saldo_tarjeta"
        android:onClick="cargar_saldo_tarjeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_pantalla2_titulo3" />

    <EditText
        android:id="@+id/edt_cargar_tarjeta"
        android:layout_width="131dp"
        android:layout_height="59dp"
        android:layout_marginStart="10dp"
        android:autofillHints="@string/cantidad"
        android:ems="10"
        android:hint="@string/cantidad"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/bt_cargar_saldo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bt_cargar_saldo" />

    <Button
        android:id="@+id/bt_pagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/pagar"
        android:onClick="pagar_pedido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_cargar_tarjeta" />


</androidx.constraintlayout.widget.ConstraintLayout>